# smartmeter-gateway

./: .clangd  .cproject  .gitignore  .project  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  aarch64-toolchain.cmake  config.h.in  config.yaml
.github/workflows/: build.yml  release.yml
include/: common_registers.h  config_yaml.h  json_utils.h  logger.h  meter.h  meter_error.h  meter_master.h  meter_registers.h  meter_slave.h  meter_types.h  modbus_error.h  modbus_slave.h  modbus_utils.h  mqtt_client.h  privileges.h  register_base.h  signal_handler.h
src/: config_yaml.cpp  main.cpp  meter.cpp  meter_master.cpp  meter_slave.cpp  modbus_slave.cpp  mqtt_client.cpp
